--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,8 +15,10 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"vscjava.vscode-java-pack",
 				"vscjava.vscode-spring-boot-dashboard",
-				"vmware.vscode-spring-boot"
+				"vmware.vscode-spring-boot",
+				"redhat.fabric8-analytics"
 			]
 		}
 	}
