--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bjss.spring</groupId>
-    <artifactId>spring-boot-example</artifactId>
+    <artifactId>spring-boot-sandbox</artifactId>
     <version>1.0.0</version>
 
     <parent>
